[package]
name = "black-scholes-calculator"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
getrandom = { version = "0.2", features = ["js"] }
statrs = "0.16"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]

# Optimize for small binary size
[profile.release]
opt-level = "z"
lto = true